--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 APScheduler==3.10.1
+moviepy==1.0.3
 nostr==0.0.2
-snscrape==0.6.2.20230321.dev17+ge4c7644
+numpy==1.24.3
+Pillow==9.5.0
+Requests==2.31.0
