--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=40.8.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "Mirrorstr"
-version = "0.0.3"
+version = "0.0.6"
 authors = [
   { name="pleblira", email="pleblira@gmail.com" },
 ]
@@ -14,19 +14,26 @@ requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
+    "Operating System :: OS Independent"]
 
 dependencies = [
 "moviepy==1.0.3",
 "nostr==0.0.2",
 "numpy==1.24.3",
 "Pillow==9.5.0",
-"Requests==2.31.0"]
-
-[tool.hatch.metadata]
-allow-direct-references = true
+"Requests==2.31.0",
+"APScheduler==3.10.1"
+]
 
 [project.urls]
 "Homepage" = "https://github.com/pleblira/mirrorstr"
 "Bug Tracker" = "https://github.com/pleblira/mirrorstr/issues"
+
+[project.scripts]
+mirrorstr = "mirrorstr.mirrorstr:mirrorstr"
+
+[tool.setuptools.package-data]
+myModule = ["*.txt"]
+
+[tool.setuptools.packages.find]
+where = ["src"]
