--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "Mirrorstr"
-version = "0.0.8"
+version = "0.0.81"
 authors = [
   { name="pleblira", email="pleblira@gmail.com" },
 ]
@@ -33,7 +33,7 @@ dependencies = [
 mirrorstr = "mirrorstr.mirrorstr:mirrorstr"
 
 [tool.setuptools.package-data]
-myModule = ["*.txt"]
+mirrorstr = ["*.txt"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
